# fanuc_description

fanuc_crx_description/: package.xml
fanuc_crx_description/launch/: view_crx.launch.py
fanuc_crx_description/robot/: crx10ia_lp.urdf.xacro
fanuc_crx_description/urdf/: crx10ia_l_urdf_macro.xacro  crx10ia_lp_urdf_macro.xacro  crx10ia_urdf_macro.xacro  crx20ia_l_urdf_macro.xacro  crx30ia_urdf_macro.xacro  crx5ia_urdf_macro.xacro
fanuc_lrmate_description/: CMakeLists.txt  package.xml
fanuc_m10_description/: CMakeLists.txt  package.xml
fanuc_m20_description/: CMakeLists.txt  package.xml
fanuc_r1000ia_description/: CMakeLists.txt  package.xml
fanuc_r1000ia_description/launch/: view_r1000ia.launch.py
fanuc_r1000ia_description/meshes/r1000ia_100f/collision/: base.stl  j1.stl  j2.stl  j3.stl  j4.stl  j5.stl  j6.stl
fanuc_r1000ia_description/meshes/r1000ia_100f/visual/: base.dae  j1.dae  j2.dae  j3.dae  j4.dae  j5.dae  j6.dae
fanuc_r1000ia_description/robot/: r1000ia_100f.urdf.xacro
fanuc_r1000ia_description/rviz/: view_r1000ia.rviz
fanuc_r1000ia_description/urdf/: r1000ia_100f_urdf_macro.xacro
fanuc_r2000_description/: CMakeLists.txt  package.xml
fanuc_r2000_description/launch/: view_r2000.launch.py
fanuc_r2000_description/meshes/r2000ic_125l/collision/: base.stl  j1.stl  j2.stl  j3.stl  j4.stl  j5.stl  j6.stl
fanuc_r2000_description/meshes/r2000ic_125l/visual/: base.dae  j1.dae  j2.dae  j3.dae  j4.dae  j5.dae  j6.dae
fanuc_r2000_description/robot/: r2000ic_125l.urdf.xacro
fanuc_r2000_description/urdf/: r2000ic_125l_urdf_macro.xacro
(+133 files in other folders)
